# arsenal_gear

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  api.html  architecture.html  code-models.html  dev-requirements.txt  developers.html  docs.html  genindex.html  index.html  models.html  objects.inv  outputs.html  paper_plots.ipynb  parameters.html  population_average.py  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup_dev  setup_dev.sh  tests.html  troubleshooting.html  wind_mass_losses.py  wind_pop_synth.ipynb
.context/: CODEBASE_SUMMARY.md  architecture_discussion_2026-02-05.md
.doctrees/: api.doctree  architecture.doctree  code-models.doctree  developers.doctree  docs.doctree  environment.pickle  index.doctree  models.doctree  outputs.doctree  parameters.doctree  quickstart.doctree  tests.doctree  troubleshooting.doctree
_autosummary/: arsenal_gear.dist_funcs.binaries.BinaryDistribution.html  arsenal_gear.dist_funcs.binaries.Fraction.html  arsenal_gear.dist_funcs.binaries.LogUniformPeriod.html  arsenal_gear.dist_funcs.binaries.LogUniformSemimajor.html  arsenal_gear.dist_funcs.binaries.MassRatio.html  arsenal_gear.dist_funcs.binaries.Period.html  arsenal_gear.dist_funcs.binaries.Semimajor.html  arsenal_gear.dist_funcs.binaries.StepFraction.html  arsenal_gear.dist_funcs.binaries.UniformMassRatio.html  arsenal_gear.dist_funcs.binaries.html  arsenal_gear.dist_funcs.html  arsenal_gear.dist_funcs.imf.IMF.html  arsenal_gear.dist_funcs.imf.Salpeter.html  arsenal_gear.dist_funcs.imf.html  arsenal_gear.feedbacks.FBMechanism.html  arsenal_gear.feedbacks.html  arsenal_gear.feedbacks.sn.html  arsenal_gear.feedbacks.sn.lifetimes_Raiteri.html  arsenal_gear.html  (+25 more)
(+207 files in other folders)
