[build-system]
requires = ["setuptools"]

[project]
name = "arsenal_gear"
authors = [
    {name="BW Keller", email="bkeller1@memphis.edu"},
    {name="Zachary Wyatt", email="zdwyatt@memphis.edu"},
    {name="Lachlan Lancaster", email="ltl2125@columbia.edu"},
    {name="Eric Andersson", email="eandersson@amnh.org"},
    {name="Marta Reina-Campos", email="reinacampos@cita.utoronto.ca"},
    {name="James Wadsley", email="wadsley@mcmaster.ca"},
    {name="Claude Cournoyer-Cloutier", email="cournoyc@mcmaster.ca"},
]
description = "arsenal gear feedback population synthesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "sphinx>=7",
    "scipy>=1.10",
    "astropy",
    "pyyaml",
    "tqdm",
    "myst-parser",
    ]
dynamic = ["version"]

[tool.setuptools]
packages = ["arsenal_gear",
    "arsenal_gear.dist_funcs",
    "arsenal_gear.feedbacks",
    "arsenal_gear.element_yields",
    "arsenal_gear.stellar_evolution",]
